p2/confs/app-three.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: enesaltinorak/app3:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
